[tool.poetry]
name = "cf-json-logger"
version = "0.1.0"
description = "Consistent web logs by Carnall Farrar Ltd."
authors = ["Leo Edwards <leo.edwards@carnallfarrar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
